<resources>
    <string name="app_name">PCI Info</string>
    <string name="btn_english_string">English</string>
    <string name="btn_bm_string">Bahasa Malaysia</string>
    <string name="title_activity_login_screen">Sign in</string>
    <string name="login_button_string">login</string>
    <string name="et_email_string">Email</string>
    <string name="et_password_string">Password</string>
    <string name="reg_btn_string">Register</string>
    <string name="title_activity_main_page">Chat Room</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Log Out</string>
    <string name="nav_bar_title_string">MVTutor</string>
    <string name="nav_information_string">Check In</string>
    <string name="nav_prepci_string">1v1 Multiplayer</string>
    <string name="nav_pciprocedure_string">Leaderboard</string>
    <string name="nav_postpci_string">User Info</string>
    <string name="nav_prevent_string">Shop</string>
    <string name="nav_status_string">Status</string>
    <string name="nav_mock_string">Mock Test</string>
    <string name="nav_dash_string">Dashboard</string>
    <string name="nav_information_string_bm">Baca</string>
    <string name="nav_prepci_string_bm">1v1 Lawan</string>
    <string name="nav_pciprocedure_string_bm">Papan Cemerlang</string>
    <string name="nav_postpci_string_bm">Info Pesakit</string>
    <string name="nav_status_string_bm">Status</string>
    <string name="nav_mock_string_bm">Mock Test</string>
    <string name="nav_dash_string_bm">Dashboard</string>
    <string name="nav_prevent_string_bm">Kedai</string>
    <string name="title_activity_scrolling">What is PCI?</string>
    <string name="title_info_1"><b>"Percutaneous Coronary Intervention (PCI)"</b></string>
    <string name="information_text_1">
        "Percutaneous Coronary Intervention (PCI) also knows as coronary angioplasty."
        "Its purpose is to open up blocked coronary arteries caused by coronary artery disease and restore blood flow to the heart muscle.\n\n"

        "It is an invasive procedure involving X-rays taking, which use a special thin tubing"
        "instrument with an attached deflated balloon and is threaded up to the coronary"
        "arteries. The cardiologist will inflate the balloon to widen blocked artery area where"
        "blood flow to the heart muscle has been reduced or cut off. Sometimes, it is combined"
        "with the implantation of a stent to help to keep the artery open and decrease the risk of"
        "another blockage."
    </string>
    <string name="title_info_2"> <b>"Why do you need PCI?"</b></string>
    <string name="information_text_2">
        "Your heart is a muscle that pumps blood to your body, delivering oxygen and"
        "nutrients to all the cells. Your heart needs its own supply of oxygen and nutrient. "
        "Coronary arteries play an important role in supplying blood to your heart muscles."
    </string>
    <string name="title_info_3"><b>"Coronary Artery Disease"</b></string>
    <string name="information_text_3">
        "Your heart’s arteries can become blocked or narrowed by a buildup of cholesterol"
        "(atheroma), cells, or other substances (plaque). This build up process is called"
        "atherosclerosis. Atheroma will reduce blood flow to your heart and causes chest pain"
        "(angina). If blood clot formed or get worse where it completely block blood flow, it"
        "can cause a heart attack (myocardial infarction)."
    </string>
    <string name="title_activity_pre_procedure">Preparation before PCI</string>
    <string name="preprocedure_title_string1">Step 1</string>
    <string name="preprocedure_desc_string1">
        "You will need to come be in the hospital a day earlier before the procedure. Blood"
        "test and electrocardiogram (ECG) will be conducted."
    </string>
    <string name="preprocedure_title_string2">Step 2</string>
    <string name="preprocedure_desc_string2">
        "Tell the doctor or nurse if you are hypersensitive to any contrast dye, medication,"
        "iodine, seafood or shellfish used as X-ray contrast during PCI."
    </string>
    <string name="preprocedure_title_string3">Step 3</string>
    <string name="preprocedure_desc_string3">
        "Inform doctor if you are pregnant or think you may be pregnant because you will"
        "be exposed to radiation during PCI."
    </string>
    <string name="preprocedure_title_string4">Step 4</string>
    <string name="preprocedure_desc_string4">
        "Inform doctor if you are taking any over the counter medication, vitamins, herbs"
        "and supplements."
    </string>
    <string name="preprocedure_title_string5">Step 5</string>
    <string name="preprocedure_desc_string5">
        "You will be asked not to eat or drink for at least six hours before PCI to prevent"
        "nausea or vomiting, because painkiller may be given during procedure."
    </string>
    <string name="preprocedure_title_string6">Step 6</string>
    <string name="preprocedure_desc_string6">
        "You will be asked to remove jewelry that you are wearing and to shave in the area"
        "of your body and where the catheter will be inserted. Catheters are usually put in"
        "through your wrist or at your groin site."
    </string>
    <string name="preprocedure_title_string7">Step 7</string>
    <string name="preprocedure_desc_string7">
        "You will be asked to empty your bladder prior to the procedure."
    </string>
    <string name="preprocedure_title_string8">Step 8</string>
    <string name="preprocedure_desc_string8">
        "An intravenous (IV) line will be inserted into a vein for administration of"
        "painkillers or sedatives."
    </string>
    <string name="title_activity_procedure">How is PCI done?</string>
    <string name="cardview_procedure_list_title1_string">
        "Step 1"
    </string>
    <string name="short_procedure_description1_string">
        "You will be taken to the cardiac catheterization laboratory and asked to lie on an"
        "examination table. You will be connect to monitor to monitor your ECG, heart rate,"
        "blood pressure, breathing rate and oxygen level."
    </string>
      <string name="cardview_procedure_list_title2_string">
        "Step 2"
    </string>
    <string name="short_procedure_description2_string">
        "The site to perform the procedure will be cleaned."
    </string>
    <string name="cardview_post_procedure_list_title1_string">
        "Step 1"
    </string>
    <string name="short_post_procedure_description1_string">
        "After PCI\n\n"
        "- If your PCI is done through wrist, the sheath will be removed and you will go back"
        "to ward with a TR band around the wound to stop bleeding.\n\n"
        <b>"*Tell the doctor or nurse if you feel numbness or pain on your arm.\n\n"</b>
    </string>
    <string name="short_post_procedure_description1_2_string">
        "- If PCI is done through groin area, PCI sheath will be left in the femoral artery for 6"
        "hours. It will be stitched to your skin and cover with bandage.\n\n"
        <b>"*Do not bend the leg where the sheath was inserted.\n\n"</b>
    </string>
    <string name="cardview_post_procedure_list_title2_string">
        "Step 2"
    </string>
    <string name="short_post_procedure_description2_string">
        "Bed rest may vary from 2 to 6 hours depending on your condition.\n\n"
        "- If PCI is performed from the wrist artery, but you should not bend your arm and"
        "should rest on bed for 2 hours. The wrist compression device will be removed from"
        "your arm after 2 hours if there is no bleeding seen on your arm.\n\n"
        "- If it is done through groin area, you would need to lie quietly on your back for 6"
        "hours. PCI sheath on your groin will be removed by your doctor. Nurse or doctor will"
        "apply direct pressure for 15 minutes or longer to the place where the catheter was"
        "inserted to ensure that there is no internal bleeding."
    </string>
    <string name="cardview_post_procedure_list_title4_string">
        "Step 3"
    </string>
    <string name="short_post_procedure_description4_string">
        "Doctor or nurses will check for signs of bleeding or chest discomfort. Your blood"
        "pressure, heart rate, breathing rate and oxygenation level will be monitored.\n\n"
        <b>"*You need to inform the nurse if you feel any pressure in your chest or shortness"
        "of breath during your hospital stay after procedure.\n\n"
        "*Cover your PCI site gently if you need to cough or sneeze to prevent bleeding."</b>
    </string>
     <string name="cardview_post_procedure_list_title5_string">
         "Step 4"
     </string>
    <string name="short_post_procedure_description5_string">
        "Move slowly when getting up from bed to avoid any dizziness from the long period of bed rest."
    </string>
     <string name="cardview_post_procedure_list_title6_string">
         "Step 5"
     </string>
    <string name="short_post_procedure_description6_string">
        "You will need to drink plenty of fluids. This will help your kidneys to flush out the contrast dye from your body."
    </string>
     <string name="cardview_post_procedure_list_title7_string">
         "Step 6"
     </string>
    <string name="short_post_procedure_description7_string">
        "You will need to stay in the hospital for a night to rest or longer if required depending on your situation."
    </string>
    <string name="cardview_post_procedure_list_title8_string">
        "\n<b>Care of groin site</b>"
    </string>
    <string name="short_post_procedure_description8_string">
        "It is normal to have a small bruise or lump at the site.\n\n"
        "1. Do not scrub the site.\n\n"
        "2. For the first 2 days: do not stoop or squat. When you cough, sneeze or move your"
        "bowels, hold your hand over the puncture site and press gently.\n\n"
        "3. Do not lift more than 4.5kg for at least 3 to 5 days.\n\n"
        "4. If you start bleeding from the site, lie down flat and press firmly on the site. Call for an ambulance."
    </string>
     <string name="cardview_post_procedure_list_title9_string">
        "\n<b>Care of wrist or arm site</b>"
    </string>
    <string name="short_post_procedure_description9_string">
        "It is normal to have soreness at the punctured site and mild tingling in your hand for up to 3 days.\n\n"
        "1. For 2 days, do not use your hand or arm to support your weight (rising from a"
        "chair) or bend your wrist.\n\n"
        "2. For 2 days, do not lift more than 2kg or exercise your arm.\n\n"
        "3. If you start bleeding from the site, sit down and press firmly on the site with your"
        "fingers for 10 minutes. If the bleeding stops, sit still and keep your wrist straight for 2"
        "hours. If bleeding does not stop, go to a hospital."
    </string>
      <string name="cardview_post_procedure_list_title10_string">
        "\n<b>*When to seek medical advice</b>"
    </string>
     <string name="short_post_procedure_description10_string">
         "1. When you have chills or a fever greater than 38 degree Celsius.\n\n"
         "2. New swelling or the bruising becomes widespread at the PCI site.\n\n"
         "3. Site become hard and painful."
    </string>
        <string name="cardview_post_procedure_list_title11_string">
        "\n<b>*Go to hospital immediately</b>"
    </string>
     <string name="short_post_procedure_description11_string">
         "4. Bleeding from wound that does not stop or restarts after applying pressure for 10 minutes. \n\n"
         "5. Arm or leg changes colour or becomes numb or cool to touch"
    </string>
</resources>