<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:title="@string/nav_information_string_bm" />
        <item
            android:id="@+id/nav_prepci"
            android:title="@string/nav_prepci_string_bm" />
        <item
            android:id="@+id/nav_pciprocedure"
            android:title="@string/nav_pciprocedure_string_bm" />
        <item
            android:id="@+id/nav_postpci"
            android:title="@string/nav_postpci_string_bm" />
        <item
            android:id="@+id/nav_health"
            android:title="@string/nav_prevent_string_bm" />
    </group>



</menu>
