<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:title="@string/nav_information_string"
            android:icon="@drawable/calendar"/>
        <item
            android:id="@+id/nav_prepci"
            android:title="@string/nav_prepci_string"
            android:icon="@drawable/fight_selection"/>
        <item
            android:id="@+id/nav_pciprocedure"
            android:title="@string/nav_pciprocedure_string"
            android:icon="@drawable/quest_selection"/>
        <item
            android:id="@+id/nav_postpci"
            android:title="@string/nav_postpci_string"
            android:icon="@drawable/player_info_selection"/>
    </group>



</menu>
