<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="guan.pcihearten.post_procedure"
    tools:showIn="@layout/activity_post_procedure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cardview_post_procedure_list_title1_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title1"
                    android:text="@string/short_post_procedure_description1_string"
                    android:textColor="#8b8b8b" />

                <ImageView
                    android:id="@+id/cardview_post_procedure_image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/short_post_procedure_description1"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/post_1" />

                <TextView
                    android:id="@+id/short_post_procedure_description1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_image1"
                    android:text="@string/short_post_procedure_description1_2_string"
                    android:textColor="#8b8b8b" />

                <ImageView
                    android:id="@+id/cardview_post_procedure_image1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/short_post_procedure_description1_2"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/post_2" />



            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cardview_post_procedure_list_title2_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title2"
                    android:text="@string/short_post_procedure_description2_string"
                    android:textColor="#8b8b8b" />

                <ImageView
                    android:id="@+id/cardview_post_procedure_image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/short_post_procedure_description2"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/post_3" />




            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cardview_post_procedure_list_title4_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title4"
                    android:text="@string/short_post_procedure_description4_string"
                    android:textColor="#8b8b8b" />






            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cardview_post_procedure_list_title5_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title5"
                    android:text="@string/short_post_procedure_description5_string"
                    android:textColor="#8b8b8b" />






            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cardview_post_procedure_list_title6_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title6"
                    android:text="@string/short_post_procedure_description6_string"
                    android:textColor="#8b8b8b" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cardview_post_procedure_list_title7_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title7"
                    android:text="@string/short_post_procedure_description7_string"
                    android:textColor="#8b8b8b" />






            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/android_card_view_post_procedure8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/cardview_post_procedure_image8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/post_4" />

                <TextView
                android:id="@+id/cardview_post_procedure_list_title8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_below="@id/cardview_post_procedure_image8"
                android:text="@string/cardview_post_procedure_list_title8_string"
                android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title8"
                    android:text="@string/short_post_procedure_description8_string"
                    android:textColor="#8b8b8b" />

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:layout_below="@id/short_post_procedure_description8"
                    android:text="@string/cardview_post_procedure_list_title9_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title9"
                    android:text="@string/short_post_procedure_description9_string"
                    android:textColor="#8b8b8b" />

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:layout_below="@id/short_post_procedure_description9"
                    android:text="@string/cardview_post_procedure_list_title10_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title10"
                    android:text="@string/short_post_procedure_description10_string"
                    android:textColor="#8b8b8b" />

                <TextView
                    android:id="@+id/cardview_post_procedure_list_title11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:layout_below="@id/short_post_procedure_description10"
                    android:text="@string/cardview_post_procedure_list_title11_string"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/short_post_procedure_description11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardview_post_procedure_list_title11"
                    android:text="@string/short_post_procedure_description11_string"
                    android:textColor="#8b8b8b" />






            </RelativeLayout>
        </android.support.v7.widget.CardView>








    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
